# app-app

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  README.md  flowsettings.py  fly.toml  index.py  launch.sh  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run_api.py
api/: __init__.py  auth.py  context.py  main.py  message_blocks.py  metrics.py  schemas.py
docs/: about.md  agent_intelligence_research.md  agent_phase1_guardrails.md  agent_results_performance_improvements.md  backend_roadmap.md  bug_report.md  capability_based_planner_analysis.md  citation_pipeline_observability_plan.md  company_agent_operational_playbook.md  company_agent_rollout_plan.md  execution_roadmap.md  files_over_500_loc.md  frontend_design_tokens_audit.md  frontend_tasks.md  google_oauth_setup.md  incremental_kb_operations.md  index.md  integrations.md  local_model.md  mindmap_usage.md  online_install.md  open_tasks.md  release_qa_matrix.md  universal_theatre_flow_and_design.md  universal_theatre_internal_beta_playbook.md  universal_theatre_internal_beta_report_template.md  universal_theatre_rollout_guardrails.md  usage.md  user_journey.md
scripts/: _restart_backend.ps1  backfill_pdf_page_units.py  check_changed_file_locs.sh  dev_react_stack.bat  dev_react_stack.py  dev_react_stack.sh  dev_stack_start.ps1  dev_stack_stop.ps1  ensure_computer_use_runtime.py  gmail_playwright_login.py  live_theatre_smoke.py  report_files_over_500_loc.ps1  run_agent_eval_suite.py  run_linux.sh  run_macos.sh  run_windows.bat  send_test_email.py  smoke_release_gate.ps1  update_linux.sh  update_macos.sh  update_windows.bat  (+1 more)
(+1717 files in other folders)
